2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Regression test for #594728.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilderTest.cs (TestGlobalMethods): Improve test.

2010-03-30  Zoltan Varga  <vargaz@gmail.com>

	* ModuleBuilderTest.cs: Add a test for #592215.

2010-03-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilderTest.cs: Test GetReferencedAssemblies
	and GetLoadedModules.

2010-03-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilderTest.cs: Add test for v4 GetModule(s).

2010-03-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* DerivedTypesTests.cs: Fix some tests under v4.

2010-03-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Add Test for ContainsGenericParameters.

2010-03-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: New tests for GetMethod, GetConstructor and GetField.

2010-02-02  Zoltan Varga  <vargaz@gmail.com>

	* DynamicMethodTest.cs: Add a test for #575955.

2010-01-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilderTest.cs: Add a test for #574353.

2010-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Add tests for #572660.

2010-01-03  Zoltan Varga  <vargaz@gmail.com>

	* ILGeneratorTest.cs: Add a test for #564411.

2009-12-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Add tests for #565127.

2009-12-16  Zoltan Varga  <vargaz@gmail.com>

	* MethodBuilderTest.cs: Add a test for #565117.

2009-12-09  Jb Evain  <jbevain@novell.com>

	* ILGeneratorTest.cs: add a test for Emit(OpCode,LocalBuilder)
	when the opcode is not related to locals.

2009-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodBuilderTest.cs: Add (copy from TypeBuilderTest) test 
	cases for two DefineGenericParameters

2009-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleBuilderTest.cs: Add test cases for GetType overloads