@@ -1,5 +1,9 @@
 2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* TypeBuilderTest.cs: Regression test for #591225.
+
+2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* TypeBuilderTest.cs: Regression test for #594728.
 
 2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>
